--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "portdebruges.eu",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.15.22",
+    "gatsby-plugin-netlify-cms": "^4.1.21",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
