--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "gatsby": "^2.15.22",
     "gatsby-plugin-netlify-cms": "^4.1.21",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-remark": "^2.6.26",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.18.2"
   },
   "repository": {
