--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,31 @@ collections:
     folder: blog
     create: true
     fields:
+      - { name: type, default: blog, widget: hidden }
       - { name: path, label: Path }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
+  - name: kite-spots
+    label: Kite Spots
+    folder: kite-spots
+    create: true
+    fields:
+      - { name: type, default: kite-spots, widget: hidden }
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: datetime }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
+  - name: bruges
+    label: Bruges
+    folder: bruges
+    create: true
+    fields:
+      - { name: type, default: bruges, widget: hidden }
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: datetime }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
+
+
+      
