--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "portdebruges.eu",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "name": "learn-starter",
   "version": "0.1.0",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "dev": "next dev",
+    "debug": "set NODE_OPTIONS=--inspect && next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
-    "gatsby": "^2.15.22",
-    "gatsby-plugin-netlify-cms": "^4.1.21",
-    "gatsby-source-filesystem": "^2.1.28",
-    "gatsby-transformer-remark": "^2.6.26",
-    "netlify-cms-app": "^2.9.7",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "next": "9.5.3",
+    "postcss-preset-env": "^6.7.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "swr": "^0.3.5",
+    "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
-    "eslint-config-react-app": "^5.0.2",
-    "prettier": "^1.18.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.3"
   }
 }
