Update core components, meetnet components, add reload access token mechanism, add reactStrictMode, small stuff.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "nookies": "^2.4.0",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
