--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "next": "^10.0.0",
     "nookies": "^2.4.0",
     "postcss-preset-env": "^6.7.0",
