--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "export": "next export"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.2",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
-    "next": "^10.0.0",
+    "next": "^10.0.2",
     "nookies": "^2.4.0",
+    "postcss": "^8.1.8",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.3.5",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
