--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "debug": "set NODE_OPTIONS=--inspect && next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "lint": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "autoprefixer": "^10.0.4",
@@ -25,6 +27,15 @@
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^16.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
 }
