--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.1",
-    "date-fns": "^2.22.1",
-    "date-fns-tz": "^1.1.4",
-    "next": "^11.0.1",
-    "nookies": "^2.5.2",
-    "postcss": "^8.3.5",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "swr": "^0.3.11",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "10.3.3",
+    "date-fns": "2.23.0",
+    "date-fns-tz": "1.1.6",
+    "next": "11.1.0",
+    "nookies": "2.5.2",
+    "postcss": "8.3.6",
+    "postcss-preset-env": "6.7.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "swr": "0.3.11",
+    "tailwindcss": "2.2.8"
   },
   "devDependencies": {
-    "@types/node": "^14.17.5",
-    "@types/react": "^16.14.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-simple-import-sort": "^6.0.1",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "@types/node": "14.17.12",
+    "@types/react": "16.14.14",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-simple-import-sort": "6.0.1",
+    "prettier": "2.3.2",
+    "typescript": "4.4.2"
   }
 }
