--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-    "autoprefixer": "10.3.3",
-    "date-fns": "2.23.0",
+    "autoprefixer": "10.4.0",
+    "date-fns": "2.25.0",
     "date-fns-tz": "1.1.6",
-    "next": "11.1.0",
+    "next": "12.0.3",
     "nookies": "2.5.2",
-    "postcss": "8.3.6",
+    "postcss": "8.3.11",
     "postcss-preset-env": "6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "0.3.11",
-    "tailwindcss": "2.2.8"
+    "swr": "1.0.1",
+    "tailwindcss": "2.2.19"
   },
   "devDependencies": {
-    "@types/node": "14.17.12",
-    "@types/react": "16.14.14",
-    "@typescript-eslint/eslint-plugin": "4.29.3",
-    "@typescript-eslint/parser": "4.29.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "eslint-config-prettier": "6.15.0",
+    "@types/node": "16.11.6",
+    "@types/react": "17.0.34",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "12.0.3",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-simple-import-sort": "6.0.1",
-    "prettier": "2.3.2",
-    "typescript": "4.4.2"
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "prettier": "2.4.1",
+    "typescript": "4.4.4"
   }
 }
