--- a/package.json
+++ b/package.json
@@ -13,30 +13,26 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.0",
-    "date-fns": "2.25.0",
+    "date-fns": "2.27.0",
     "date-fns-tz": "1.1.6",
-    "next": "12.0.3",
+    "next": "12.0.7",
     "nookies": "2.5.2",
-    "postcss": "8.3.11",
-    "postcss-preset-env": "6.7.0",
+    "postcss": "8.4.4",
+    "postcss-preset-env": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "1.0.1",
-    "tailwindcss": "2.2.19"
+    "swr": "1.1.0",
+    "tailwindcss": "3.0.0"
   },
   "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.34",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.26.1",
+    "@types/node": "16.11.12",
+    "@types/react": "17.0.37",
+    "@typescript-eslint/eslint-plugin": "5.6.0",
+    "@typescript-eslint/parser": "5.6.0",
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "prettier": "2.4.1",
-    "typescript": "4.4.4"
+    "typescript": "4.5.2"
   }
 }
