--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-    "autoprefixer": "10.4.2",
+    "autoprefixer": "10.4.4",
     "date-fns": "2.28.0",
-    "date-fns-tz": "1.2.2",
-    "next": "12.0.10",
+    "date-fns-tz": "1.3.3",
+    "next": "12.1.5",
     "nookies": "2.5.2",
-    "postcss": "8.4.6",
-    "postcss-preset-env": "7.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "1.2.1",
-    "tailwindcss": "3.0.19"
+    "postcss": "8.4.12",
+    "postcss-preset-env": "7.4.3",
+    "swr": "1.3.0",
+    "tailwindcss": "3.0.24"
   },
   "devDependencies": {
-    "@types/node": "17.0.16",
     "@types/react": "17.0.39",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "@types/node": "17.0.23",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "eslint-config-next": "12.1.5",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "typescript": "4.5.5"
+    "eslint": "8.13.0",
+    "npm-check-updates": "^12.5.9",
+    "typescript": "4.6.3"
   }
 }
