--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "export": "next export",
     "lint": "npx eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier ."
   },
   "dependencies": {
     "autoprefixer": "10.4.4",
@@ -30,10 +30,13 @@
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint": "8.13.0",
     "npm-check-updates": "^12.5.9",
+    "prettier": "^2.6.2",
     "typescript": "4.6.3"
   }
 }
