chore: update prettier/eslint config and format all files (❁´◡`❁)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "mixins",
-    "portdebruges",
-    "superforecast",
-    "superforecasts",
-    "windfinder"
-  ]
+  "cSpell.words": ["mixins", "portdebruges", "superforecast", "superforecasts", "windfinder"]
 }
