--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@typescript-eslint/eslint-plugin": "5.51.0",
     "@typescript-eslint/parser": "5.51.0",
     "eslint-config-next": "13.1.6",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint": "8.34.0",
-    "npm-check-updates": "^16.7.4",
-    "prettier": "^2.8.4",
+    "npm-check-updates": "16.7.4",
+    "prettier": "2.8.4",
     "typescript": "4.9.5"
   }
 }
